# rusti

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/commands/: mod.rs  role.rs  voice.rs
src/gremlin/: repo.rs
src/message_broker/: mod.rs  rabbit.rs  redis.rs
src/redis/: mod.rs  redispeech.rs
src/util/: mod.rs  rabbit.rs  travis.rs
src/web_server/: webhook.rs
